--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,41 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.status {
+  margin: 50px 0;
+}
+
+.square {
+  background: #fff;
+  border: 5px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  margin-right: -5px;
+  margin-top: -5px;
+  padding: 0;
+  text-align: center;
+  width: 50px;
+  height: 50px;z
+}
+
+.square:focus {
+  outline: none;
+}
+
+.game {
+  display: flex;
+  flex-direction: row;
+}
+
+.game-info {
+  margin-left: 20px;
+}
